<resources>
    <string name="app_name">ATD</string>
    <string name="_icon_search_description">It is a search icon</string>
    <string name="_icon_cart_description">It is a cart icon</string>
    <string name="_icon_text_description">It is a text describing current activity </string>
    <string name="_icon_ATD_logo_description">It is ATD Logo</string>
    <string name="dummyText">Dummy Text</string>
    <string name="shape_rectangle">Its an rectangle shaped line</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="my_lists">My Lists</string>
    <string name="my_order_approvals">My Order Approvals</string>
    <string name="my_quotes">My Quotes</string>
    <string name="quotes_details">Quote Details</string>
    <string name="my_garage">My Garage</string>
    <string name="we_ve_listened_to_your_valuable_feedback_and_have_made_some_great_improvements">We’ve listened to your valuable feedback and have made some great improvements!</string>
    <string name="welcome_to_adtmobile">Welcome to ATDMobile</string>
    <string name="streamlined_search">Streamlined Search</string>
    <string name="a_variety_of_ways_to_find_exactly_what_you_re_looking_for_quickly_and_easily">A variety of ways to find exactly what you’re looking for quickly and easily.</string>
    <string name="license_plate">License Plate</string>
    <string name="barcode">Barcode</string>
    <string name="product">Product</string>
    <string name="vehicle">Vehicle</string>
    <string name="rebates">Rebates</string>
    <string name="vin_number">VIN Number</string>
    <string name="product_delivery">Product Delivery</string>
    <string name="specify_delivery_options_by_product_to_get_what_you_need_when_you_need_it">Specify delivery options by product to get what you need when you need it.</string>
    <string name="local_amp_national"><![CDATA[Local & National]]></string>
    <string name="air">Air</string>
    <string name="warehouse_pickup">Warehouse Pickup</string>
    <string name="future_delivery">Future Delivery</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="username">Username</string>
    <string name="password_case_sensitive">Password (Case Sensitive)</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="enable_face_touch_id">Enable Face/Touch ID</string>
    <string name="log_in">Log In</string>
    <string name="txt_resetPassword"><font color="#999999">Forget password?</font> <font color="#0076BE">Reset Password</font></string>
    <string name="txt_resetPassword_red"><font color="#999999">Forget password?</font> <font color="#FF4438">Reset Password</font></string>
    <string name="message_success">Success</string>
    <string name="message_no_support_biometrics">Device not support Biometrics</string>
    <string name="message_no_hardware_available">No Hardware available</string>
    <string name="error_hw_unavailable">The hardware is unavailable. Try again later.</string>
    <string name="error_unable_to_process">The sensor was unable to process the current image.</string>
    <string name="error_time_out">The current operation has been running too long and has timed out.</string>
    <string name="error_no_space">The operation can\'t be completed because there is not enough device storage remaining.</string>
    <string name="error_canceled">The operation was canceled by the user or because the biometric sensor is unavailable.</string>
    <string name="error_lockout">The operation was canceled because the biometrics is locked out due to too many attempts. This occurs after 5 failed attempts, and lasts for 30 seconds.</string>
    <string name="error_vendor">The operation failed due to a vendor-specific error.</string>
    <string name="error_lockout_permanent">Wrong biometrics too many times. Use device credential to unlock.</string>
    <string name="error_user_canceled">Please close the app and open it again to unlock</string>
    <string name="error_no_biometrics">The Device does not have any biometrics enrolled.</string>
    <string name="error_hw_not_present">The device does not have the required authentication hardware.</string>
    <string name="error_no_device_credentials">The device does not have pin, pattern, or password set up.</string>
    <string name="error_security_update_required">A security vulnerability has been discovered with one or more hardware sensors. The affected sensor(s) are unavailable until a security update has addressed the issue.</string>
    <string name="error_unknown">Unknown error.</string>
    <string name="message_user_app_authentication">Denied for Biometrics</string>
    <string name="text_unlock">Unlock</string>
    <string name="message_set_up_pattern">Set up PIN/Pattern/Password.</string>
    <string name="title_device_lock">Device Lock</string>
    <string name="title_set_up_device_lock">Set up Device lock.</string>
    <string name="title_biometric_dialog">Biometrics</string>
    <string name="text_description_biometrics_dialog">Use biometrics to continue.</string>
    <string name="error_msg">Something went wrong</string>
    <string name="location">Location</string>
    <string name="location_number">Location #</string>
    <string name="select_location">Select Location</string>
    <string name="search">Search</string>
    <string name="save_location">Save Location</string>
    <string name="atdonline">AtdOnline</string>
    <string name="tireprosmobile">TireProsMobile</string>
    <string name="choose_your_profile">Choose Your Profile</string>
    <string name="customer_care_1_800_511_1226">Customer Care (1-800-511-1226)</string>
    <string name="atdmobile_version">ATDMobile: Version</string>
    <string name="base_shape_to_hold_icon">base shape to hold icon</string>
    <string name="icon_of_respective_preference_setting">Icon of respective Preference Setting</string>
    <string name="icon_for_arrow_right">icon for arrow right</string>
    <string name="product_search_inst">Please use one or more of the following</string>
    <string name="product_search_inst_2">categories to narrow your search.</string>
    <string name="product_category">Product Category</string>
    <string name="passenger_light">Passenger Light</string>
    <string name="tire_size">Tire Size</string>
    <string name="e_g_2256517_or_225_65r17">e.g. 2256517 or 225/65R17</string>
    <string name="brand">Brand</string>
    <string name="brands">Brands</string>
    <string name="all">All</string>
    <string name="speed_rating">Speed Rating</string>
    <string name="seasonal_designation">Seasonal Designation</string>
    <string name="supplier_number">Supplier Number</string>
    <string name="enter_supplier_number">Enter Supplier Number</string>
    <string name="atd_part_number">ATD Part Number</string>
    <string name="enter_part_numbner">Enter Part Number</string>
    <string name="passenger_light_truck">Passenger/Light Truck</string>
    <string name="medium_truck">Medium Truck</string>
    <string name="golf_and_atv">Golf and ATV</string>
    <string name="trailer">Trailer</string>
    <string name="farm">Farm</string>
    <string name="otr_grader_em">OTR, Grader, EM</string>
    <string name="industrial">Industrial</string>
    <string name="b_31mph_50kmh">B 31mph/50kmh</string>
    <string name="c_37mph_60kmh">C 37mph/60kmh</string>
    <string name="d_40mph_65kmh">D 40mph/65kmh</string>
    <string name="e_43mph_70kmh">E 43mph/70kmh</string>
    <string name="f_50mph_80kmh">F 50mph/80kmh</string>
    <string name="g_56mph_90kmh">G 56mph/90kmh</string>
    <string name="j_62mph_100kmh">J 62mph/100kmh</string>
    <string name="k_68mph_110kmh">K 68mph/110kmh</string>
    <string name="l_75mph_120kmh">L 75mph/120kmh</string>
    <string name="your_search_returned_0_results">Your search returned 0 results.</string>
    <string name="please_revise_your_search_terms_and_try_again">Please revise your search terms and try again.</string>
    <string name="listening">Listening...</string>
    <string name="searching">Searching...</string>
    <string name="trayagain">Try Again!!</string>
    <string name="tap_mic_search">Tap mic to search</string>
    <string name="logout">You have successfully logged out</string>
    <string name="ok">OK</string>
    <string name="clear_all">CLEAR ALL</string>
    <string name="atd_app_locked">Your ATD app is locked</string>
    <string name="apply">APPLY</string>
    <string name="preferred_brands">Preferred Brands</string>
    <string name="other_brands">Other Brands</string>
    <string name="expand">expand</string>
    <string name="collapse">collapse</string>
    <string name="please_select_brand">Please select Brands</string>
    <string name="m_81mph_130kmh">M 81mph/130kmh</string>
    <string name="n_87mph_140kmh">N 87mph/140kmh</string>
    <string name="p_93mph_150kmh">P 93mph/150kmh</string>
    <string name="q_99mph_160kmh">Q 99mph/160kmh</string>
    <string name="r_106mph_170kmh">R 106mph/170kmh</string>
    <string name="s112mph_180kmh">S 112mph/180kmh</string>
    <string name="t_118mph_190kmh">T 118mph/190kmh</string>
    <string name="u_124mph_200kmh">U 124mph/200kmh</string>
    <string name="h_130mph_210kmh">H 130mph/210kmh</string>
    <string name="v_149mph_240kmh">V 149mph/240kmh</string>
    <string name="w_168mph_270kmh">W 168mph/270kmh</string>
    <string name="y_186mph_300kmh">Y 186mph/300kmh</string>
    <string name="y_186_mph_300_kmh">(Y) 186+mph/300+kmh</string>
    <string name="winter">Winter</string>
    <string name="_3peak_mt_snowflake">3Peak Mt. Snowflake</string>
    <string name="all_other">All Other</string>
    <string name="tire_types">Tire Types</string>
    <string name="wheel_type">Wheel Type</string>
    <string name="custom_wheel">Custom Wheels</string>
    <string-array name="diameter">
        <item>8</item>
        <item>10</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>16.5</item>
        <item>17</item>
        <item>17.5</item>
        <item>18</item>
        <item>19</item>
        <item>19.5</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>22.5</item>
        <item>24</item>
        <item>24.5</item>
        <item>26</item>
        <item>28</item>
    </string-array>
    <string name="width">Width</string>
    <string name="lug_bolt_circle">Lugs/Bolt Circle</string>
    <string-array name="finish">
        <item>ATD Finish</item>
        <item>Anthracite</item>
        <item>Black</item>
        <item>Blue</item>
        <item>Bronze</item>
        <item>Chrome</item>
        <item>Galvanized</item>
        <item>Gold</item>
        <item>Green</item>
        <item>Machined Finished</item>
        <item>Opal</item>
        <item>Orange</item>
        <item>Polished</item>
        <item>Red</item>
        <item>Silver</item>
        <item>Two-Tone White</item>
    </string-array>
    <string name="offset_description">Offset Description</string>
    <string name="product_search_hint">Please use one or more of the following categories to narrow your search.</string>
    <string name="customer_pickup_must_apply_to_all_item_s_in_your_cart">Customer Pickup must apply to all item(s) in your cart.</string>
    <string name="local_and_national_delivery_items_are_not_eligible_for_customer_pickup_and_will_be_removed_from_your_cart">Local+ and National delivery items are not eligible for Customer Pickup and \nwill be removed from your cart.</string>
    <string name="cancel">Cancel</string>
    <string name="yes_remove_item_s_and_select_customer_pickup">Yes, remove item(s) and \nselect Customer Pickup</string>
</resources>