<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/card"
    android:layout_margin="60dp"
    android:layout_gravity="center"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_gravity="center"
        android:id="@+id/ivClose"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/alert"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:layout_gravity="center"
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/customer_pickup_must_apply_to_all_item_s_in_your_cart"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:padding="10dp"
        android:gravity="center"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/ivClose"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:layout_gravity="center"
        android:id="@+id/tvMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/arial"
        android:text="@string/local_and_national_delivery_items_are_not_eligible_for_customer_pickup_and_will_be_removed_from_your_cart"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeader" />
    <View
        android:id="@+id/viewSeparatorMain"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/dusty_gray"
        app:layout_constraintTop_toBottomOf="@id/tvMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:id="@+id/tvConfirm"
        android:layout_width="wrap_content"
        android:text="@string/yes_remove_item_s_and_select_customer_pickup"
        android:textColor="@color/atd_blue"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewSeparatorMain"
        app:srcCompat="@drawable/wave_gif" />
    <View
        android:id="@+id/viewSeparator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/dusty_gray"
        app:layout_constraintTop_toBottomOf="@id/tvConfirm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:layout_gravity="center"
        android:id="@+id/tvCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:padding="10dp"
        android:textSize="14sp"
        android:textColor="@color/atd_blue"
        android:fontFamily="@font/arial"
        app:layout_constraintTop_toBottomOf="@+id/viewSeparator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>